--- a/COS301_Phase2-Group3a.tex
+++ b/COS301_Phase2-Group3a.tex
@@ -139,7 +139,22 @@ For further references see \href{https://github.com/COS301-Group-3-A-Phase2/Part
 \newpage
 
 \section{Change Log}
-
+\item The following changes were made to the document:
+\item[$\bullet$]  Mar 3, 2015 -  Document created and skeleton created -  Joseph LN
+\item[$\bullet$]  Mar 3, 2015 -  Introduction and Purpose section added - Lessev JI 
+\item[$\bullet$]  Mar 4, 2015 -  Layout of document changed - Tessera KA
+\item[$\bullet$]  Mar 4, 2015 -  Logo added to document - Malo SS
+\item[$\bullet$]  Mar 4, 2015 -  Added files to the documents- Tessera KA
+\item[$\bullet$]  Mar 4, 2015 -  Added Architecture Constraints to document- Obo D
+\item[$\bullet$]  Mar 4, 2015 -  Added Quality requirements to document - Malo SS
+\item[$\bullet$]  Mar 5, 2015 -  Added Access Channel Requirements to document -  Joseph LN 
+\item[$\bullet$]  Mar 5, 2015 -  Added Quality Requirements to document - Lessev JI
+\item[$\bullet$]  Mar 6, 2015 -  Added Quality Requirements to document - Tessera KA
+\item[$\bullet$]  Mar 6, 2015 -  Edit document structure- Obo D
+\item[$\bullet$]  Mar 6, 2015 -  Added Intergration Requirements to document -  Hill ST
+\item[$\bullet$]  Mar 6, 2015 -  Added Intergration Requirements to document - Pieterse A 
+\item[$\bullet$]  Mar 10, 2015 -  Added Glossary and Change Log -  Joseph LN 
+\item[$\bullet$]  Mar 10, 2015 -  Document Finalised - Malo SS
 
 \section{Introduction}
 Designing and implementing a system as the one in question is a vast amount of work and requires a lot of planning and thinking. All the functional requirements needed for the system were covered in the previous phase. In this phase all the non-functional requirements will be covered. These are all categorized as architectural requirements.  \\
@@ -226,30 +241,6 @@ The scope of this phase is understanding the functional requirements covered in 
 \item[$\bullet$]Flexible caching
 
 \end{description}
-%Kal and Jessica please have a look at this to see if you'd like it in your section
-\subsection{Architecture Patterns}
-	\begin{description}
-\item The Model View Control (MVC) architecture will be used in the system.
-This architecture allows change to the system's state (The Model) is completed through a common interface (The Control). (The View) is where developments are made to user interfaces and these changes are independent to the system providing extensibility at a low cost.
-PHP’s implicit MVC features will be used to implement this architecture. 
-\item We chose MVC because:
-\item[$\bullet$] It encapsulates the interaction from the user and transforms those interactions (in the form of requests) into business logic that interacts with the system model to produce responses. 
-\item[$\bullet$] A (multi-)layered approach encapsulated by MVC which enables the separation of business logic proving the need for sub-systems and internal and external API’s.
-\end{description}
-
-	\begin{description}
-\item This architecture will be based on Service Oriented Architecture (SOA) reference architecture. It is a loosely-coupled architecture where services exist independently from each other. They communicate with each other by means of protocols and standards-based interfaces such as SOAP and XML Schema to define messages passed between objects. In this case SOAP would not work.
-\item Services are deemed as individual objects so new services and functionality can easily be added to the existing system during progression.
-\item Reasons to use SOA:
-\item[$\bullet$] It is flexible and agile.
-\item[$\bullet$] System is open to change and easy alteration
-\item[$\bullet$] Simplicity of implementation.
-\item[$\bullet$] Reuse of objects
-
-\end{description}
-%Armand and Sean please plug in your information here
-\subsection{Intergration Access Channel}
-
 
 \section{Quality Requirements}
 	\subsection{Critical Quality Requirements}
@@ -428,7 +419,7 @@ PHP’s implicit MVC features will be used to implement this architecture.
 \item Buzz Notification - An add-on that will be used to notify users via email, when there are status changes,
 	moderation failures and appraisals which have been received.
 \item Buzz Reporting - An add-on that a user or lecturer can use to define and generate their own reports.
-\item RDMS - A relational database management system will be used to store and retrieve all data/information that is directly connected to the Buzz system. 
+\item RDBMS - A relational database management system will be used to store and retrieve all data/information that is directly connected to the Buzz system. 
 \item Both client- and server-side scripting to facilitate database access and algorithms.
 \item File creation and storage for the communication of information between modules.
 \end{description}
@@ -534,6 +525,29 @@ Used to provide devices with connection to a router.
 PIETERSE, V. 2015. COS301: Mini project Buzz. In: Lecture notes issued online. University of Pretoria. Pretoria, South Africa
 
 \section{Glossary}
+\item [$\bullet$] HTTPS - HyperText Transfer Protocol Secure
+\item [$\bullet$] POST - HTTP request method that passes data to a web server
+\item [$\bullet$] Authentication - Granting access based on legitimate identifying details
+\item [$\bullet$] Authorization - Granting action based on nature of privileges after being authenticated.
+\item [$\bullet$] MD-5 Encryption - message-digest algorithm
+\item [$\bullet$] RESTful - architectural style
+\item [$\bullet$] PHP - PHP: Hypertext Preprocessor
+\item [$\bullet$] SMTP - Simple Mail Transfer Protocol
+\item [$\bullet$] JavaEE -Java Platform Enterprise Edition
+\item [$\bullet$] JPA - Java Persistence API
+\item [$\bullet$] CakePHP - PHP web application framework
+\item [$\bullet$] MVC - Model-View-Controller
+\item [$\bullet$] CS Website - www.cs.up.ac.za
+\item [$\bullet$] RDBMS - Relational Database Management System
+\item [$\bullet$] LDAP - Lightweight Directory Access Protocol
+\item [$\bullet$] REST -Representational State Transfer
+\item [$\bullet$] API - Application programming interface
+\item [$\bullet$] TCP/IP-Transmission Control Protocol/Internet Protocol
+\item [$\bullet$] HTML - HyperText Markup Language
+\item [$\bullet$] AJAX -asynchronous JavaScript and XML
+\item [$\bullet$] MYSQL - My Structured Query Language
+\item [$\bullet$] COBALT -Component-Based Lightweight Toolkit
+\item [$\bullet$] Ucarp - Unix Common Address Redundancy Protocol
 
 \end{document}
 
