Finalized document for upload

--- a/COS301_Phase2-Group3a.tex
+++ b/COS301_Phase2-Group3a.tex
@@ -139,23 +139,24 @@ For further references see \href{https://github.com/COS301-Group-3-A-Phase2/Part
 \newpage
 
 \section{Change Log}
-\item The following changes were made to the document:
-\item[$\bullet$]  Mar 3, 2015 -  Document created and skeleton created -  Joseph LN
-\item[$\bullet$]  Mar 3, 2015 -  Introduction and Purpose section added - Lessev JI 
-\item[$\bullet$]  Mar 4, 2015 -  Layout of document changed - Tessera KA
-\item[$\bullet$]  Mar 4, 2015 -  Logo added to document - Malo SS
-\item[$\bullet$]  Mar 4, 2015 -  Added files to the documents- Tessera KA
-\item[$\bullet$]  Mar 4, 2015 -  Added Architecture Constraints to document- Obo D
-\item[$\bullet$]  Mar 4, 2015 -  Added Quality requirements to document - Malo SS
-\item[$\bullet$]  Mar 5, 2015 -  Added Access Channel Requirements to document -  Joseph LN 
-\item[$\bullet$]  Mar 5, 2015 -  Added Quality Requirements to document - Lessev JI
-\item[$\bullet$]  Mar 6, 2015 -  Added Quality Requirements to document - Tessera KA
-\item[$\bullet$]  Mar 6, 2015 -  Edit document structure- Obo D
-\item[$\bullet$]  Mar 6, 2015 -  Added Intergration Requirements to document -  Hill ST
-\item[$\bullet$]  Mar 6, 2015 -  Added Intergration Requirements to document - Pieterse A 
-\item[$\bullet$]  Mar 10, 2015 -  Added Glossary and Change Log -  Joseph LN 
-\item[$\bullet$]  Mar 10, 2015 -  Document Finalised - Malo SS
+The following changes were made to the document:\newline \newline
+ Mar 3, 2015 -  Document created and skeleton created -  Joseph LN \\ \\  
+ Mar 3, 2015 -  Introduction and Purpose section added - Lessev JI \\ \\
+ Mar 4, 2015 -  Layout of document changed - Tessera KA \\ \\
+ Mar 4, 2015 -  Logo added to document - Malo SS \\ \\
+Mar 4, 2015 -  Added files to the documents- Tessera KA \\ \\
+Mar 4, 2015 -  Added Architecture Constraints to document- Obo D \\ \\
+ Mar 4, 2015 -  Added Quality requirements to document - Malo SS \\ \\
+ Mar 5, 2015 -  Added Access Channel Requirements to document -  Joseph LN \\ \\ 
+ Mar 5, 2015 -  Added Quality Requirements to document - Lessev JI \\ \\
+Mar 6, 2015 -  Added Quality Requirements to document - Tessera KA \\ \\
+ Mar 6, 2015 -  Edit document structure- Obo D \\ \\
+ Mar 6, 2015 -  Added Intergration Requirements to document -  Hill ST \\ \\
+ Mar 6, 2015 -  Added Intergration Requirements to document - Pieterse A \\ \\
+ Mar 10, 2015 -  Added Glossary and Change Log -  Joseph LN \\ \\
+ Mar 10, 2015 -  Document Finalised - Malo SS
 
+\newpage
 \section{Introduction}
 Designing and implementing a system as the one in question is a vast amount of work and requires a lot of planning and thinking. All the functional requirements needed for the system were covered in the previous phase. In this phase all the non-functional requirements will be covered. These are all categorized as architectural requirements.  \\
 \subsection{Purpose}
@@ -169,6 +170,7 @@ The document will cover all the non-functional aspects of the requirements inclu
 \subsection{Project Scope}
 The scope of this phase is understanding the functional requirements covered in the previous phase and using them to build and derive the architectural requirements needed for the implementation of the system.\\
 
+\newpage
 \section{Access Channel Requirements}
 \begin{description}
 \item Logging in to the system is done over HTTPS POST, and  we send the user's password as an MD5-encrypted string. 
@@ -241,7 +243,7 @@ The scope of this phase is understanding the functional requirements covered in 
 \item[$\bullet$]Flexible caching
 
 \end{description}
-
+\newpage
 \section{Quality Requirements}
 	\subsection{Critical Quality Requirements}
 	%Kale-ab
@@ -504,6 +506,7 @@ Users who are registered as guests on the BuzzSpace will only be allowed to read
 \texttt{IE(Internet explora)}
 \end{description}
 
+\newpage
 \subsection{Architectural Patterns/Frameworks}
 	\begin{description}
 \item[$\bullet$] Layer (object-oriented design)\\
@@ -521,36 +524,34 @@ Used to provide devices with connection to a router.
 \item[$\bullet$] SOA(Services Oriented Architectures)
 \item It is agile and flexible. Allows change and easy alterations to the system.
 \end{description}
+
+\newpage
 \section{References}
 PIETERSE, V. 2015. COS301: Mini project Buzz. In: Lecture notes issued online. University of Pretoria. Pretoria, South Africa
 
 \section{Glossary}
-\item [$\bullet$] HTTPS - HyperText Transfer Protocol Secure
-\item [$\bullet$] POST - HTTP request method that passes data to a web server
-\item [$\bullet$] Authentication - Granting access based on legitimate identifying details
-\item [$\bullet$] Authorization - Granting action based on nature of privileges after being authenticated.
-\item [$\bullet$] MD-5 Encryption - message-digest algorithm
-\item [$\bullet$] RESTful - architectural style
-\item [$\bullet$] PHP - PHP: Hypertext Preprocessor
-\item [$\bullet$] SMTP - Simple Mail Transfer Protocol
-\item [$\bullet$] JavaEE -Java Platform Enterprise Edition
-\item [$\bullet$] JPA - Java Persistence API
-\item [$\bullet$] CakePHP - PHP web application framework
-\item [$\bullet$] MVC - Model-View-Controller
-\item [$\bullet$] CS Website - www.cs.up.ac.za
-\item [$\bullet$] RDBMS - Relational Database Management System
-\item [$\bullet$] LDAP - Lightweight Directory Access Protocol
-\item [$\bullet$] REST -Representational State Transfer
-\item [$\bullet$] API - Application programming interface
-\item [$\bullet$] TCP/IP-Transmission Control Protocol/Internet Protocol
-\item [$\bullet$] HTML - HyperText Markup Language
-\item [$\bullet$] AJAX -asynchronous JavaScript and XML
-\item [$\bullet$] MYSQL - My Structured Query Language
-\item [$\bullet$] COBALT -Component-Based Lightweight Toolkit
-\item [$\bullet$] Ucarp - Unix Common Address Redundancy Protocol
+HTTPS - HyperText Transfer Protocol Secure \\ \\
+POST - HTTP request method that passes data to a web server \\ \\
+Authentication - Granting access based on legitimate identifying details \\ \\
+Authorization - Granting action based on nature of privileges after being authenticated. \\ \\
+MD-5 Encryption - message-digest algorithm \\ \\
+RESTful - architectural style \\ \\
+PHP - PHP: Hypertext Preprocessor \\ \\
+SMTP - Simple Mail Transfer Protocol \\ \\
+JavaEE -Java Platform Enterprise Edition \\ \\
+JPA - Java Persistence API \\ \\
+CakePHP - PHP web application framework \\ \\
+MVC - Model-View-Controller \\ \\
+CS Website - www.cs.up.ac.za \\ \\
+RDBMS - Relational Database Management System \\ \\
+LDAP - Lightweight Directory Access Protocol \\ \\
+REST -Representational State Transfer \\ \\
+API - Application programming interface \\ \\
+TCP/IP-Transmission Control Protocol/Internet Protocol \\ \\
+HTML - HyperText Markup Language \\ \\
+AJAX -asynchronous JavaScript and XML \\ \\
+MYSQL - My Structured Query Language \\ \\
+COBALT -Component-Based Lightweight Toolkit \\ \\
+Ucarp - Unix Common Address Redundancy Protocol \\ \\
 
-\end{document}
-
-\bibliography{myrefs}{} 
-\bibliographystyle{ieeetr}
 \end{document}
